--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+   
+    <link href="https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css" rel="stylesheet">
+   
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css">
+   
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +29,20 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+
+
+    <title>Amandeep Singh Portfolio</title>
   </head>
+
+
+
+
+
+
+
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You will get the information about Amandeep Education background.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -40,4 +55,17 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
+
+
+
+
+
+
+
+
+
+
+
+  
 </html>
